--- a/Hexoban.cbp
+++ b/Hexoban.cbp
@@ -11,58 +11,50 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option projectLinkerOptionsRelation="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DALLEGRO_STATICLINK" />
 					<Add directory="../../../../../devel/Allegro5/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-static-libgcc" />
 					<Add option="-static-libstdc++" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_acodec.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_audio.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_color.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_dialog.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_font.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_image.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_main.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_memfile.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_physfs.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_primitives.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\liballegro_ttf.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libfreetype.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libfreetype.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libogg.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libogg.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libphysfs.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libphysfs.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libpng.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libpng.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libpng16.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libpng16.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbis.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbis.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbisenc.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbisenc.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbisfile.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libvorbisfile.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libzlib.dll.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libzlibstatic.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libgdiplus.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libuuid.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libkernel32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libwinmm.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libpsapi.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libopengl32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libglu32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libuser32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libcomdlg32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libgdi32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libshell32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libole32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libadvapi32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libws2_32.a" />
-					<Add library="..\..\..\..\..\MinGW\lib\libshlwapi.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_acodec-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_audio-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_color-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_dialog-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_font-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_image-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_memfile-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_physfs-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_primitives-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_ttf-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro-5.0.10-monolith-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro-5.0.10-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libdumb-0.9.3-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libFLAC-1.2.1-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libfreetype-2.4.8-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libogg-1.2.1-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libopenal-1.14-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libvorbis-1.3.2-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libvorbisfile-1.3.2-static-mt.a" />
+					<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libzlib-1.2.5-static-mt.a" />
+					<Add library="C:\MinGW\lib\libgdiplus.a" />
+					<Add library="C:\MinGW\lib\libuuid.a" />
+					<Add library="C:\MinGW\lib\libkernel32.a" />
+					<Add library="C:\MinGW\lib\libwinmm.a" />
+					<Add library="C:\MinGW\lib\libpsapi.a" />
+					<Add library="C:\MinGW\lib\libopengl32.a" />
+					<Add library="C:\MinGW\lib\libglu32.a" />
+					<Add library="C:\MinGW\lib\libuser32.a" />
+					<Add library="C:\MinGW\lib\libcomdlg32.a" />
+					<Add library="C:\MinGW\lib\libgdi32.a" />
+					<Add library="C:\MinGW\lib\libshell32.a" />
+					<Add library="C:\MinGW\lib\libole32.a" />
+					<Add library="C:\MinGW\lib\libadvapi32.a" />
+					<Add library="C:\MinGW\lib\libws2_32.a" />
+					<Add library="C:\MinGW\lib\libshlwapi.a" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -80,7 +72,47 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DALLEGRO_STATICLINK" />
 		</Compiler>
+		<Linker>
+			<Add option="-static-libgcc" />
+			<Add option="-static-libstdc++" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_acodec-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_audio-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_color-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_dialog-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_font-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_image-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_memfile-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_physfs-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_primitives-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro_ttf-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro-5.0.10-monolith-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\liballegro-5.0.10-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libdumb-0.9.3-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libFLAC-1.2.1-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libfreetype-2.4.8-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libogg-1.2.1-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libopenal-1.14-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libvorbis-1.3.2-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libvorbisfile-1.3.2-static-mt.a" />
+			<Add library="C:\Users\Jachu\Downloads\allegro-5.0.10-mingw-4.7.0\allegro-5.0.10-mingw-4.7.0\lib\libzlib-1.2.5-static-mt.a" />
+			<Add library="C:\MinGW\lib\libgdiplus.a" />
+			<Add library="C:\MinGW\lib\libuuid.a" />
+			<Add library="C:\MinGW\lib\libkernel32.a" />
+			<Add library="C:\MinGW\lib\libwinmm.a" />
+			<Add library="C:\MinGW\lib\libpsapi.a" />
+			<Add library="C:\MinGW\lib\libopengl32.a" />
+			<Add library="C:\MinGW\lib\libglu32.a" />
+			<Add library="C:\MinGW\lib\libuser32.a" />
+			<Add library="C:\MinGW\lib\libcomdlg32.a" />
+			<Add library="C:\MinGW\lib\libgdi32.a" />
+			<Add library="C:\MinGW\lib\libshell32.a" />
+			<Add library="C:\MinGW\lib\libole32.a" />
+			<Add library="C:\MinGW\lib\libadvapi32.a" />
+			<Add library="C:\MinGW\lib\libws2_32.a" />
+			<Add library="C:\MinGW\lib\libshlwapi.a" />
+		</Linker>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
